# CodeWhale

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: web.yml
crates/agent/: Cargo.toml
crates/app-server/src/: chat_completions.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/assets/: models_dev.bundled.json
crates/config/src/: lib.rs  setup_state.rs  tests.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: fleet.rs
crates/release/: Cargo.toml
crates/secrets/: Cargo.toml
crates/state/: Cargo.toml
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/locales/: en.json  zh-Hans.json
crates/tui/src/: client.rs  codex_model_cache.rs  config.rs  fast_hash.rs  localization.rs  main.rs  purge.rs  regex_cache.rs  runtime_api.rs  runtime_threads.rs  seam_manager.rs  settings.rs  tool_output_receipts.rs  xai_oauth.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: mod.rs  session.rs
crates/tui/src/commands/groups/config/: config.rs  mod.rs
crates/tui/src/commands/groups/core/: mod.rs  setup.rs
crates/tui/src/commands/groups/debug/: tokens.rs
crates/tui/src/commands/groups/session/: mod.rs
crates/tui/src/config/: tests.rs
crates/tui/src/core/engine/: tests.rs  tool_catalog.rs  turn_loop.rs
crates/tui/src/fleet/: mod.rs  scheduler.rs
crates/tui/src/prompts/: base.md
crates/tui/src/runtime_api/: tests.rs
crates/tui/src/tools/: file.rs  plan.rs  verifier.rs  workflow.rs
crates/tui/src/tools/subagent/: mailbox.rs  mod.rs  tests.rs
crates/tui/src/tui/: app.rs  context_menu.rs  history.rs  model_picker.rs  plan_prompt.rs  provider_picker.rs  sidebar.rs  tool_routing.rs  ui.rs
crates/tui/src/tui/app/: tests.rs
crates/tui/src/tui/history/: agent_activity.rs  plan.rs  tests.rs  tool_output.rs
crates/tui/src/tui/setup/: mod.rs  persistence.rs  remote.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: mod.rs
crates/tui/src/tui/widgets/: mod.rs  pending_input_preview.rs  tool_card.rs
crates/tui/tests/fixtures/: codex_models_cache.json
docs/: AGENT_RUNTIME.md  FLEET.md  FLEET_WORKFLOW_TUTORIAL.md  KEYBINDINGS.md  MODES.md  REBRAND.md  SUBAGENTS.md  TOOL_LIFECYCLE.md  TOOL_SURFACE.md  V0_9_0_EXECUTION_MAP.md
docs/examples/dogfood-automatic/: wf_a1_read_only_audit.workflow.js
scripts/release/: check-versions.sh
web/: package-lock.json  package.json
web/lib/: facts.generated.ts
web/scripts/: derive-facts.mjs  facts-lib.mjs
workflows/: issue_audit.workflow.js
