[package]
name = "codewhale-agent"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Model/provider registry and fallback strategy for CodeWhale"

[dependencies]
codewhale-config = { path = "../config", version = "0.8.66" }
serde.workspace = true
