[package]
name = "codewhale-execpolicy"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Execution policy and approval model for CodeWhale"

[dependencies]
anyhow.workspace = true
codewhale-protocol = { path = "../protocol", version = "0.8.66" }
serde.workspace = true
