[package]
name = "codewhale-release"
version = "0.8.68"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Shared CodeWhale release discovery and version comparison helpers"

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustls.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
webpki-roots = "1"